Update navbar font size

--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -11,12 +11,13 @@
 
 .navbarItem {
   display: inline-flex;
-  font-size: 2vw;
-  padding: 8px; }
+  font-size: 3vw;
+  padding: 8px;
+  text-align: center; }
   .navbarItem:hover {
     background: rgba(100, 100, 100, 0.8);
     cursor: pointer; }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 666px) {
   .navbarItem {
     font-size: 20px; } }
