--- a/src/components/EducationSection/styles.module.scss
+++ b/src/components/EducationSection/styles.module.scss
@@ -6,7 +6,7 @@ $baseSizePx: 72px;
 }
 
 .sectionTitle {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 0.6 * $baseSizeVw;
   padding: 0.22 * $baseSizeVw;
   text-align: center;
