--- a/src/components/ExperienceSection/styles.module.scss
+++ b/src/components/ExperienceSection/styles.module.scss
@@ -11,7 +11,7 @@ $baseSizePx: 72px;
 }
 
 .sectionTitle {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 0.6 * $baseSizeVw;
   padding: 0.22 * $baseSizeVw;
   text-align: center;
@@ -23,7 +23,7 @@ $baseSizePx: 72px;
 }
 
 .sectionOpen {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   margin-top: -1.5 * $baseSizeVw;
 }
 
@@ -73,7 +73,7 @@ $baseSizePx: 72px;
 .centerTitlePentagon {
   border-radius: 4 * $baseSizeVw;
   display: block;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 0.6 * $baseSizeVw;
   height: 4 * $baseSizeVw;
   line-height: 4 * $baseSizeVw;
@@ -150,7 +150,7 @@ $baseSizePx: 72px;
 
   .centerTitlePentagon {
     border-radius: 4 * $baseSizePx;
-    font-family: 'Acme', sans-serif;
+    font-family: 'Comfortaa', cursive;
     font-size: 0.6 * $baseSizePx;
     height: 4 * $baseSizePx;
     line-height: 4 * $baseSizePx;
