--- a/src/components/Project/styles.module.scss
+++ b/src/components/Project/styles.module.scss
@@ -71,7 +71,7 @@ a {
 
 .title {
   color: black;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 5vw;
   margin-bottom: 20px;
 }
