--- a/src/components/EducationSection/styles.module.css
+++ b/src/components/EducationSection/styles.module.css
@@ -2,7 +2,7 @@
   padding: 4vw 0; }
 
 .sectionTitle {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 6vw;
   padding: 2.2vw;
   text-align: center; }
