--- a/src/components/FooterSection/styles.module.scss
+++ b/src/components/FooterSection/styles.module.scss
@@ -3,7 +3,8 @@ $baseSizePx: 72px;
 
 .footer {
   color: #FFFFFF;
-  min-height: 45vh;
+  height: 45vh;
+  max-height: 75vw;
   overflow: hidden;
   padding: 24px;
   position: relative;
@@ -22,7 +23,7 @@ $baseSizePx: 72px;
 }
 
 .footerTitle {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 0.6 * $baseSizeVw;
   padding: 16px;
   text-align: center;
