--- a/src/components/HeaderSection/styles.module.css
+++ b/src/components/HeaderSection/styles.module.css
@@ -21,14 +21,14 @@
   border-radius: 100%;
   filter: grayscale(30%);
   height: 50%;
-  margin-top: 15vh;
   max-height: 350px;
   z-index: 3; }
 
 .title {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 7.5vw;
-  margin: 1.5vw auto; }
+  margin: 0 auto;
+  margin-bottom: 1.5vh; }
 
 @media screen and (min-width: 720px) {
   .title {
