--- a/src/components/Job/styles.module.css
+++ b/src/components/Job/styles.module.css
@@ -62,7 +62,7 @@ a {
 
 .title {
   color: black;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 5vw;
   margin-bottom: 50px; }
 
