--- a/src/components/ProjectSection/styles.module.scss
+++ b/src/components/ProjectSection/styles.module.scss
@@ -11,7 +11,7 @@ $baseSizePx: 72px;
 }
 
 .sectionTitle {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 0.6 * $baseSizeVw;
   padding: 0.22 * $baseSizeVw;
   text-align: center;
@@ -23,7 +23,7 @@ $baseSizePx: 72px;
 }
 
 .sectionOpen {
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
 }
 
 .chart {
@@ -71,7 +71,7 @@ $baseSizePx: 72px;
 .sectionTitleCircle {
   border-radius: 4 * $baseSizeVw;
   display: block;
-  font-family: 'Acme', sans-serif;
+  font-family: 'Comfortaa', cursive;
   font-size: 0.6 * $baseSizeVw;
   height: 4 * $baseSizeVw;
   line-height: 4 * $baseSizeVw;
